<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- Dear students, please *do not* change the following metadata. Thanks! -->

	<artifactId>swt23w06</artifactId>
	<version>1.0.0.BUILD-SNAPSHOT</version>

	<name>swt23w06</name>
	<description>ST lab project of group swt23w06</description>
	<url>https://github.com/st-tu-dresden-praktikum/swt23w06</url>
	<scm>
		<url>https://github.com/st-tu-dresden-praktikum/swt23w06</url>
	</scm>

	<parent>
		<groupId>de.tudresden.inf.st.lab</groupId>
		<artifactId>st-lab-parent</artifactId>
		<version>4.0.0</version>
		<relativePath/>
	</parent>

	<properties>
		<java.version>17</java.version>
		<salespoint.version>9.0.0</salespoint.version>
		<!--suppress UnresolvedMavenProperty -->
		<sonar.host.url>${env.STLAB_SONAR_HOST_URL}</sonar.host.url>
		<!--suppress UnresolvedMavenProperty -->
		<sonar.token>${env.STLAB_SONAR_LOGIN}</sonar.token>
		<argLine>-Xmx1G</argLine>
	</properties>

	<dependencies>

		<!--
			Additional project dependencies go here.

			BUT PLEASE NOTE!

			The parent pom that is referenced above already includes most libraries
			necessary for the lab: Spring, Salespoint, Hibernate, JUnit, etc.

			You can list the current dependencies and their versions using the
			`mvn dependency:list` command.

			Use Maven Central for package search (https://search.maven.org/).
		-->

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>jquery</artifactId>
			<version>3.6.0</version>
		</dependency>


		<!-- mocks for testing -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.7.0</version>
			<scope>test</scope>
		</dependency>


		<!-- utility for working with streams -->
		<dependency>
			<groupId>one.util</groupId>
			<artifactId>streamex</artifactId>
			<version>0.8.2</version>
		</dependency>

	</dependencies>
	<repositories>

		<repository>
			<id>salespointframework</id>
			<url>https://www.st.inf.tu-dresden.de/SalesPoint/repository</url>
		</repository>

	</repositories>

</project>
